[NAE-2122] Implement Structured and Efficient Pagination in gRPC
- Fix tests